--- a/evenement.html
+++ b/evenement.html
@@ -15,4 +15,123 @@
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="about.html">À Propos</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a
+                <li><a href="rdv.html">Prendre RDV</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="hero">
+            <h2>Photographie d'Événement</h2>
+            <p>Capturez l'énergie et les sourires de vos événements corporatifs ou familiaux.</p>
+        </section>
+
+        <section class="galerie">
+            <h2>Galerie Événement</h2>
+            <div class="corkboard">
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/evenement1.jpg" alt="Groupe lors d'un événement corporatif">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/evenement2.jpg" alt="Animation lors d'une fête familiale">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/evenement3.jpg" alt="Conférence avec public attentif">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/evenement4.jpg" alt="Spectacle en soirée événementielle">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/evenement5.jpg" alt="Atelier interactif">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/evenement6.jpg" alt="Buffet festif">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/evenement7.jpg" alt="Discours principal">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/evenement8.jpg" alt="Jeux et animations">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/evenement9.jpg" alt="Photos de groupe">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/evenement10.jpg" alt="Soirée networking">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/evenement11.jpg" alt="Décoration événementielle">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/evenement12.jpg" alt="Performance live">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/evenement13.jpg" alt="Moments joyeux">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/evenement14.jpg" alt="Clôture d'événement">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/evenement15.jpg" alt="Souvenirs collectifs">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <!-- Polaroid final grand et visible (solo) -->
+                <div class="polaroid large-empty">
+                    <div class="empty-text">Bientôt vos photos ici – Contactez-nous pour immortaliser vos moments uniques ! 📸</div>
+                    <a href="contact.html" class="btn small">Ajouter vos souvenirs</a>
+                    <div class="pin"></div>
+                </div>
+            </div>
+            <!-- Bouton devis supprimé comme demandé -->
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 L'Objectif de Gabriel. Tous droits réservés.</p>
+    </footer>
+</body>
+</html>
