--- a/shooting-pub.html
+++ b/shooting-pub.html
@@ -30,78 +30,110 @@
             <h2>Galerie Shooting Pub</h2>
             <div class="corkboard">
                 <div class="polaroid">
-                    <img src="images/shooting-pub1.jpg" alt="Modèle pour campagne publicitaire">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-pub1.jpg" alt="Modèle pour campagne publicitaire">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-pub2.jpg" alt="Produit en shooting professionnel">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-pub2.jpg" alt="Produit en shooting professionnel">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-pub3.jpg" alt="Portrait commercial pour marque">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-pub3.jpg" alt="Portrait commercial pour marque">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-pub4.jpg" alt="Scène publicitaire dynamique">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-pub4.jpg" alt="Scène publicitaire dynamique">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-pub5.jpg" alt="Campagne mode shooting">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-pub5.jpg" alt="Campagne mode shooting">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-pub6.jpg" alt="Publicité produit lifestyle">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-pub6.jpg" alt="Publicité produit lifestyle">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-pub7.jpg" alt="Portrait corporate pub">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-pub7.jpg" alt="Portrait corporate pub">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-pub8.jpg" alt="Shooting e-commerce">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-pub8.jpg" alt="Shooting e-commerce">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-pub9.jpg" alt="Campagne digitale">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-pub9.jpg" alt="Campagne digitale">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-pub10.jpg" alt="Images marketing impactantes">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-pub10.jpg" alt="Images marketing impactantes">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-pub11.jpg" alt="Shooting pour réseau social">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-pub11.jpg" alt="Shooting pour réseau social">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-pub12.jpg" alt="Publicité événementielle">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-pub12.jpg" alt="Publicité événementielle">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-pub13.jpg" alt="Portrait pub professionnel">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-pub13.jpg" alt="Portrait pub professionnel">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-pub14.jpg" alt="Campagne print">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-pub14.jpg" alt="Campagne print">
+                    </div>
+                    <div class="pin"></div>
                 </div>
                 <div class="polaroid">
-                    <img src="images/shooting-pub15.jpg" alt="Shooting créatif pub">
-                    <div class="pin">📎</div>
+                    <div class="photo-frame">
+                        <img src="images/shooting-pub15.jpg" alt="Shooting créatif pub">
+                    </div>
+                    <div class="pin"></div>
                 </div>
-                <!-- Polaroid vide à la fin -->
-                <div class="polaroid empty">
+                <!-- Polaroid final grand et visible (solo) -->
+                <div class="polaroid large-empty">
                     <div class="empty-text">Bientôt vos photos ici – Contactez-nous pour immortaliser vos moments uniques ! 📸</div>
                     <a href="contact.html" class="btn small">Ajouter vos souvenirs</a>
-                    <div class="pin">📎</div>
+                    <div class="pin"></div>
                 </div>
             </div>
-            <a href="contact.html" class="btn">Demander un Devis Shooting Pub</a>
+            <!-- Bouton devis supprimé -->
         </section>
     </main>
 
     <footer>
         <p>&copy; 2023 L'Objectif de Gabriel. Tous droits réservés.</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
