--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,7 @@
             <form action="https://formspree.io/f/xrbyoeyz" method="POST">
                 <input type="email" name="email" placeholder="Votre email" required>
                 <input type="text" name="nom" placeholder="Votre nom" required>
+                <input type="tel" name="telephone" placeholder="Votre numéro de téléphone (ex. 06 XX XX XX XX)" required> <!-- Nouveau champ téléphone -->
                 <input type="text" name="lieu" placeholder="Lieu du projet (ex. ville ou salle)" required>
                 
                 <label>Sélectionnez les styles de photo qui vous intéressent :</label>
