--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,10 @@
             <h2>Contactez-nous</h2>
             <p>Envoyez-nous un message pour discuter de votre projet photo.</p>
             <form action="https://formspree.io/f/xrbyoeyz" method="POST">
-                <input type="email" name="email" placeholder="Votre email" required>
-                <input type="text" name="nom" placeholder="Votre nom" required>
-                <input type="tel" name="telephone" placeholder="Votre numéro de téléphone (ex. 06 XX XX XX XX)" required> <!-- Nouveau champ téléphone -->
-                <input type="text" name="lieu" placeholder="Lieu du projet (ex. ville ou salle)" required>
+                <input type="text" name="nom" placeholder="Votre nom" required> <!-- 1. Nom prénom (required) -->
+                <input type="text" name="lieu" placeholder="Lieu du projet (ex. ville ou salle)" required> <!-- 2. Lieu (required) -->
+                <input type="tel" name="telephone" placeholder="Votre numéro de téléphone (ex. 06 XX XX XX XX)" required> <!-- 3. Num (required) -->
+                <input type="email" name="email" placeholder="Votre email (optionnel)"> <!-- 4. Email (optionnel, pas required) -->
                 
                 <label>Sélectionnez les styles de photo qui vous intéressent :</label>
                 <div class="checkboxes">
