--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
             <h2>Contactez-nous</h2>
             <p>Envoyez-nous un message pour discuter de votre projet photo.</p>
             <form action="https://formspree.io/f/xrbyoeyz" method="POST">
-                <input type="text" name="nom" placeholder="Votre nom" required> <!-- 1. Nom prénom (required) -->
+                <input type="text" name="nom" placeholder="Votre nom prénom" required> <!-- 1. Nom prénom (required) -->
                 <input type="text" name="lieu" placeholder="Lieu du projet (ex. ville ou salle)" required> <!-- 2. Lieu (required) -->
                 <input type="tel" name="telephone" placeholder="Votre numéro de téléphone (ex. 06 XX XX XX XX)" required> <!-- 3. Num (required) -->
                 <input type="email" name="email" placeholder="Votre email (optionnel)"> <!-- 4. Email (optionnel, pas required) -->
