--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
         <section class="hero">
             <h2>Photographie d'exception pour vos moments uniques</h2>
             <p>Mariages, événements, shootings pub ou personnels – Capturons l'essence de vos souvenirs.</p>
-            <!-- Bouton supprimé comme demandé -->
         </section>
 
         <section class="services">
@@ -52,7 +51,7 @@
                     <p>Portraits uniques pour vos projets personnels.</p>
                 </a>
             </div>
-            <div class="cta-section"> <!-- Wrapper pour espace fixe -->
+            <div class="cta-section">
                 <a href="contact.html" class="btn">Prêt pour votre projet ? Contactez-nous</a>
             </div>
         </section>
