--- a/about.html
+++ b/about.html
@@ -33,5 +33,7 @@
     <footer>
         <p>&copy; 2023 L'Objectif de Gabriel. Tous droits réservés.</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
