--- a/mariage.html
+++ b/mariage.html
@@ -31,107 +31,58 @@
             <div class="corkboard">
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/mariage1.jpg" alt="Couple marié en extérieur">
+                        <img src="images/mariage/mariage1.jpg" alt="Couple marié en extérieur">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/mariage2.jpg" alt="Préparation de la mariée">
+                        <img src="images/mariage/mariage2.jpg" alt="Préparation de la mariée">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/mariage3.jpg" alt="Échange d'anneaux">
+                        <img src="images/mariage/mariage3.jpg" alt="Échange d'anneaux">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/mariage4.jpg" alt="Danse des mariés">
+                        <img src="images/mariage/mariage4.jpg" alt="Danse des mariés">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/mariage5.jpg" alt="Cérémonie intime">
+                        <img src="images/mariage/mariage5.jpg" alt="Cérémonie intime">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/mariage6.jpg" alt="Photos de groupe">
+                        <img src="images/mariage/mariage6.jpg" alt="Photos de groupe">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/mariage7.jpg" alt="Coucher de soleil mariage">
+                        <img src="images/mariage/mariage7.jpg" alt="Coucher de soleil mariage">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/mariage8.jpg" alt="Dîner festif">
+                        <img src="images/mariage/mariage8.jpg" alt="Dîner festif">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/mariage9.jpg" alt="Baiser des mariés">
+                        <img src="images/mariage/mariage9.jpg" alt="Baiser des mariés">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/mariage10.jpg" alt="Décoration florale">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/mariage11.jpg" alt="Mariée seule portrait">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/mariage12.jpg" alt="Marié en costume">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/mariage13.jpg" alt="Fête dansante">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/mariage14.jpg" alt="Détails alliance">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/mariage15.jpg" alt="Fin de soirée émouvante">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <!-- Polaroid final grand et visible (solo) -->
-                <div class="polaroid large-empty">
-                    <div class="empty-text">Bientôt vos photos ici – Contactez-nous pour immortaliser vos moments uniques ! 📸</div>
-                    <a href="contact.html" class="btn small">Ajouter vos souvenirs</a>
-                    <div class="pin"></div>
-                </div>
-            </div>
-            <!-- Bouton devis supprimé comme demandé -->
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2023 L'Objectif de Gabriel. Tous droits réservés.</p>
-    </footer>
-</body>
-</html>
+                        <img src="images/mariage/m
