--- a/evenement.html
+++ b/evenement.html
@@ -31,91 +31,91 @@
             <div class="corkboard">
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement1.jpg" alt="Groupe lors d'un événement corporatif">
+                        <img src="images/evenement/evenement1.jpg" alt="Groupe lors d'un événement corporatif">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement2.jpg" alt="Animation lors d'une fête familiale">
+                        <img src="images/evenement/evenement2.jpg" alt="Animation lors d'une fête familiale">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement3.jpg" alt="Conférence avec public attentif">
+                        <img src="images/evenement/evenement3.jpg" alt="Conférence avec public attentif">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement4.jpg" alt="Spectacle en soirée événementielle">
+                        <img src="images/evenement/evenement4.jpg" alt="Spectacle en soirée événementielle">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement5.jpg" alt="Atelier interactif">
+                        <img src="images/evenement/evenement5.jpg" alt="Atelier interactif">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement6.jpg" alt="Buffet festif">
+                        <img src="images/evenement/evenement6.jpg" alt="Buffet festif">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement7.jpg" alt="Discours principal">
+                        <img src="images/evenement/evenement7.jpg" alt="Discours principal">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement8.jpg" alt="Jeux et animations">
+                        <img src="images/evenement/evenement8.jpg" alt="Jeux et animations">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement9.jpg" alt="Photos de groupe">
+                        <img src="images/evenement/evenement9.jpg" alt="Photos de groupe">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement10.jpg" alt="Soirée networking">
+                        <img src="images/evenement/evenement10.jpg" alt="Soirée networking">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement11.jpg" alt="Décoration événementielle">
+                        <img src="images/evenement/evenement11.jpg" alt="Décoration événementielle">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement12.jpg" alt="Performance live">
+                        <img src="images/evenement/evenement12.jpg" alt="Performance live">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement13.jpg" alt="Moments joyeux">
+                        <img src="images/evenement/evenement13.jpg" alt="Moments joyeux">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement14.jpg" alt="Clôture d'événement">
+                        <img src="images/evenement/evenement14.jpg" alt="Clôture d'événement">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/evenement15.jpg" alt="Souvenirs collectifs">
+                        <img src="images/evenement/evenement15.jpg" alt="Souvenirs collectifs">
                     </div>
                     <div class="pin"></div>
                 </div>
@@ -126,12 +126,14 @@
                     <div class="pin"></div>
                 </div>
             </div>
-            <!-- Bouton devis supprimé comme demandé -->
+            <!-- Bouton devis supprimé -->
         </section>
     </main>
 
     <footer>
         <p>&copy; 2023 L'Objectif de Gabriel. Tous droits réservés.</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
