--- a/shooting-pub.html
+++ b/shooting-pub.html
@@ -31,91 +31,91 @@
             <div class="corkboard">
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-pub1.jpg" alt="Modèle pour campagne publicitaire">
+                        <img src="images/shooting-pub/shooting-pub1.jpg" alt="Modèle pour campagne publicitaire">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-pub2.jpg" alt="Produit en shooting professionnel">
+                        <img src="images/shooting-pub/shooting-pub2.jpg" alt="Produit en shooting professionnel">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-pub3.jpg" alt="Portrait commercial pour marque">
+                        <img src="images/shooting-pub/shooting-pub3.jpg" alt="Portrait commercial pour marque">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-pub4.jpg" alt="Scène publicitaire dynamique">
+                        <img src="images/shooting-pub/shooting-pub4.jpg" alt="Scène publicitaire dynamique">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-pub5.jpg" alt="Campagne mode shooting">
+                        <img src="images/shooting-pub/shooting-pub5.jpg" alt="Campagne mode shooting">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-pub6.jpg" alt="Publicité produit lifestyle">
+                        <img src="images/shooting-pub/shooting-pub6.jpg" alt="Publicité produit lifestyle">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-pub7.jpg" alt="Portrait corporate pub">
+                        <img src="images/shooting-pub/shooting-pub7.jpg" alt="Portrait corporate pub">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-pub8.jpg" alt="Shooting e-commerce">
+                        <img src="images/shooting-pub/shooting-pub8.jpg" alt="Shooting e-commerce">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-pub9.jpg" alt="Campagne digitale">
+                        <img src="images/shooting-pub/shooting-pub9.jpg" alt="Campagne digitale">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-pub10.jpg" alt="Images marketing impactantes">
+                        <img src="images/shooting-pub/shooting-pub10.jpg" alt="Images marketing impactantes">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-pub11.jpg" alt="Shooting pour réseau social">
+                        <img src="images/shooting-pub/shooting-pub11.jpg" alt="Shooting pour réseau social">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-pub12.jpg" alt="Publicité événementielle">
+                        <img src="images/shooting-pub/shooting-pub12.jpg" alt="Publicité événementielle">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-pub13.jpg" alt="Portrait pub professionnel">
+                        <img src="images/shooting-pub/shooting-pub13.jpg" alt="Portrait pub professionnel">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-pub14.jpg" alt="Campagne print">
+                        <img src="images/shooting-pub/shooting-pub14.jpg" alt="Campagne print">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-pub15.jpg" alt="Shooting créatif pub">
+                        <img src="images/shooting-pub/shooting-pub15.jpg" alt="Shooting créatif pub">
                     </div>
                     <div class="pin"></div>
                 </div>
