--- a/shooting-personnel.html
+++ b/shooting-personnel.html
@@ -31,74 +31,91 @@
             <div class="corkboard">
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel1.jpg" alt="Portrait personnel en studio">
+                        <img src="images/shooting-personnel/shooting-personnel1.jpg" alt="Portrait personnel en studio">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel2.jpg" alt="Shooting extérieur naturel">
+                        <img src="images/shooting-personnel/shooting-personnel2.jpg" alt="Shooting extérieur naturel">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel3.jpg" alt="Portrait créatif avec lumière douce">
+                        <img src="images/shooting-personnel/shooting-personnel3.jpg" alt="Portrait créatif avec lumière douce">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel4.jpg" alt="Séance photo personnelle dynamique">
+                        <img src="images/shooting-personnel/shooting-personnel4.jpg" alt="Séance photo personnelle dynamique">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel5.jpg" alt="Portrait en noir et blanc">
+                        <img src="images/shooting-personnel/shooting-personnel5.jpg" alt="Portrait en noir et blanc">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel6.jpg" alt="Shooting lifestyle urbain">
+                        <img src="images/shooting-personnel/shooting-personnel6.jpg" alt="Shooting lifestyle urbain">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel7.jpg" alt="Expression faciale authentique">
+                        <img src="images/shooting-personnel/shooting-personnel7.jpg" alt="Expression faciale authentique">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel8.jpg" alt="Portrait artistique en nature">
+                        <img src="images/shooting-personnel/shooting-personnel8.jpg" alt="Portrait artistique en nature">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel9.jpg" alt="Séance photo familiale personnelle">
+                        <img src="images/shooting-personnel/shooting-personnel9.jpg" alt="Séance photo familiale personnelle">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel10.jpg" alt="Détails portrait personnel">
+                        <img src="images/shooting-personnel/shooting-personnel10.jpg" alt="Détails portrait personnel">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel11.jpg" alt="Shooting introspectif">
+                        <img src="images/shooting-personnel/shooting-personnel11.jpg" alt="Shooting introspectif">
                     </div>
                     <div class="pin"></div>
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/shooting-personnel12.jpg" alt="Portrait avec accessoires">
+                        <img src="images/shooting-personnel/shooting-personnel12.jpg" alt="Portrait avec accessoires">
                     </div>
                     <div class="pin"></div>
                 </div>
-                <
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/shooting-personnel/shooting-personnel13.jpg" alt="Séance photo relax">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/shooting-personnel/shooting-personnel14.jpg" alt="Résultat final portrait">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/shooting-personnel/shooting-personnel15.jpg" alt="Moment personnel capturé">
+                    </div>
+                    <div class="pin"></div>
+               
