--- a/mariage.html
+++ b/mariage.html
@@ -85,4 +85,34 @@
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/mariage/m
+                        <img src="images/mariage/mariage10.jpg" alt="Décoration florale">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/mariage/mariage11.jpg" alt="Mariée seule portrait">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/mariage/mariage12.jpg" alt="Marié en costume">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/mariage/mariage13.jpg" alt="Fête dansante">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/mariage/mariage14.jpg" alt="Détails alliance">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <div class="polaroid">
+                    <div class="photo-frame">
+                        <img src="images/mariage/mariage
