--- a/shooting-personnel.html
+++ b/shooting-personnel.html
@@ -118,4 +118,22 @@
                         <img src="images/shooting-personnel/shooting-personnel15.jpg" alt="Moment personnel capturé">
                     </div>
                     <div class="pin"></div>
-               
+                </div>
+                <!-- Polaroid final grand et visible (solo) -->
+                <div class="polaroid large-empty">
+                    <div class="empty-text">Bientôt vos photos ici – Contactez-nous pour immortaliser vos moments uniques ! 📸</div>
+                    <a href="contact.html" class="btn small">Ajouter vos souvenirs</a>
+                    <div class="pin"></div>
+                </div>
+            </div>
+            <!-- Bouton devis supprimé -->
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 L'Objectif de Gabriel. Tous droits réservés.</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
