--- a/mariage.html
+++ b/mariage.html
@@ -115,4 +115,25 @@
                 </div>
                 <div class="polaroid">
                     <div class="photo-frame">
-                        <img src="images/mariage/mariage
+                        <img src="images/mariage/mariage15.jpg" alt="Fin de soirée émouvante">
+                    </div>
+                    <div class="pin"></div>
+                </div>
+                <!-- Polaroid final grand et visible (solo) -->
+                <div class="polaroid large-empty">
+                    <div class="empty-text">Bientôt vos photos ici – Contactez-nous pour immortaliser vos moments uniques ! 📸</div>
+                    <a href="contact.html" class="btn small">Ajouter vos souvenirs</a>
+                    <div class="pin"></div>
+                </div>
+            </div>
+            <!-- Bouton devis supprimé -->
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 L'Objectif de Gabriel. Tous droits réservés.</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
