Add 'Mes Clichés Favoris' link to navigation and services

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="about.html">À Propos</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="rdv.html">Prendre RDV</a></li>
+                <li><a href="cliches-favoris.html">Mes Clichés Favoris</a></li> <!-- Lien vérifié et présent -->
             </ul>
         </nav>
     </header>
@@ -49,6 +50,11 @@
                     <div class="service-icon">👤</div>
                     <h3>Shooting Personnel</h3>
                     <p>Portraits uniques pour vos projets personnels.</p>
+                </a>
+                <a href="cliches-favoris.html" class="service-btn"> <!-- Ajouté ici aussi pour cohérence, si voulu -->
+                    <div class="service-icon">📸</div>
+                    <h3>Mes Clichés Favoris</h3>
+                    <p>Une sélection de mes photos préférées.</p>
                 </a>
             </div>
             <div class="cta-section">
