Update navigation links and service section
Removed several links from the navigation menu and adjusted the service section for consistency.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
                 <li><a href="about.html">À Propos</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="rdv.html">Prendre RDV</a></li>
-                <li><a href="cliches-favoris.html">Mes Clichés Favoris</a></li>
-                <li><a href="mariage.html">Mariage</a></li>
-                <li><a href="evenement.html">Événement</a></li>
-                <li><a href="shooting-pub.html">Shooting Pub</a></li>
-                <li><a href="shooting-personnel.html">Shooting Personnel</a></li>
+                <li><a href="cliches-favoris.html">Mes Clichés Favoris</a></li> <!-- Lien vérifié et présent -->
             </ul>
         </nav>
     </header>
@@ -55,7 +51,7 @@
                     <h3>Shooting Personnel</h3>
                     <p>Portraits uniques pour vos projets personnels.</p>
                 </a>
-                <a href="cliches-favoris.html" class="service-btn">
+                <a href="cliches-favoris.html" class="service-btn"> <!-- Ajouté ici aussi pour cohérence, si voulu -->
                     <div class="service-icon">📸</div>
                     <h3>Mes Clichés Favoris</h3>
                     <p>Une sélection de mes photos préférées.</p>
@@ -63,22 +59,6 @@
             </div>
             <div class="cta-section">
                 <a href="contact.html" class="btn">Prêt pour votre projet ? Contactez-nous</a>
-            </div>
-        </section>
-
-        <!-- Section liens rapides sur une ligne -->
-        <section class="quick-links">
-            <h2>Accès Rapide à Toutes nos Pages</h2>
-            <div class="quick-links-row"> <!-- Changé en row pour une ligne -->
-                <a href="index.html" class="quick-link-btn">Accueil</a>
-                <a href="about.html" class="quick-link-btn">À Propos</a>
-                <a href="contact.html" class="quick-link-btn">Contact</a>
-                <a href="rdv.html" class="quick-link-btn">Prendre RDV</a>
-                <a href="mariage.html" class="quick-link-btn">Mariage</a>
-                <a href="evenement.html" class="quick-link-btn">Événement</a>
-                <a href="shooting-pub.html" class="quick-link-btn">Shooting Pub</a>
-                <a href="shooting-personnel.html" class="quick-link-btn">Shooting Personnel</a>
-                <a href="cliches-favoris.html" class="quick-link-btn">Mes Clichés Favoris</a>
             </div>
         </section>
     </main>
