--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
                 <li><a href="about.html">À Propos</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="rdv.html">Prendre RDV</a></li>
-                <li><a href="cliches-favoris.html">Mes Clichés Favoris</a></li>
-                <li><a href="mariage.html">Mariage</a></li>
-                <li><a href="evenement.html">Événement</a></li>
-                <li><a href="shooting-pub.html">Shooting Pub</a></li>
-                <li><a href="shooting-personnel.html">Shooting Personnel</a></li>
+                <li><a href="cliches-favoris.html">Mes Clichés Favoris</a></li> <!-- Lien vérifié et présent -->
             </ul>
         </nav>
     </header>
@@ -55,7 +51,7 @@
                     <h3>Shooting Personnel</h3>
                     <p>Portraits uniques pour vos projets personnels.</p>
                 </a>
-                <a href="cliches-favoris.html" class="service-btn">
+                <a href="cliches-favoris.html" class="service-btn"> <!-- Ajouté ici aussi pour cohérence, si voulu -->
                     <div class="service-icon">📸</div>
                     <h3>Mes Clichés Favoris</h3>
                     <p>Une sélection de mes photos préférées.</p>
