Update footer year and add designer credit

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="about.html">À Propos</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="rdv.html">Prendre RDV</a></li>
-                <li><a href="cliches-favoris.html">Mes Clichés Favoris</a></li> <!-- Lien vérifié et présent -->
+                <li><a href="cliches-favoris.html">Mes Clichés Favoris</a></li>
             </ul>
         </nav>
     </header>
@@ -51,7 +51,7 @@
                     <h3>Shooting Personnel</h3>
                     <p>Portraits uniques pour vos projets personnels.</p>
                 </a>
-                <a href="cliches-favoris.html" class="service-btn"> <!-- Ajouté ici aussi pour cohérence, si voulu -->
+                <a href="cliches-favoris.html" class="service-btn">
                     <div class="service-icon">📸</div>
                     <h3>Mes Clichés Favoris</h3>
                     <p>Une sélection de mes photos préférées.</p>
@@ -64,7 +64,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 L'Objectif de Gabriel. Tous droits réservés.</p>
+        <p class="footer-text">&copy; 2025 L'Objectif de Gabriel. Tous droits réservés. Designé par ANNA Guiffard.</p>
     </footer>
 
     <script src="script.js"></script>
