Update footer text attribution

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </main>
 
     <footer>
-        <p class="footer-text">&copy; 2025 L'Objectif de Gabriel. Tous droits réservés. Designé par ANNA Guiffard.</p>
+        <p class="footer-text">&copy; 2025 L'Objectif de Gabriel. Tous droits réservés. soutenue par Anna Guiffard.</p>
     </footer>
 
     <script src="script.js"></script>
