--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="rdv.html">Prendre RDV</a></li>
                 <li><a href="cliches-favoris.html">Mes Clichés Favoris</a></li>
+                <li><a href="mariage.html">Mariage</a></li>
+                <li><a href="evenement.html">Événement</a></li>
+                <li><a href="shooting-pub.html">Shooting Pub</a></li>
+                <li><a href="shooting-personnel.html">Shooting Personnel</a></li>
             </ul>
         </nav>
     </header>
@@ -64,7 +68,7 @@
     </main>
 
     <footer>
-        <p class="footer-text">&copy; 2025 L'Objectif de Gabriel. Tous droits réservés. soutenue par Anna Guiffard.</p>
+        <p>© 2025 L'Objectif de Gabriel. soutenue by Anna Guiffard. Tous droits réservés.</p> <!-- Centré et corrigé -->
     </footer>
 
     <script src="script.js"></script>
